--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxygen&display=swap');
 
+@font-face {
+    font-family: 'Pacifico';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Pacifico Regular'), local('Pacifico-Regular'), url(https://fonts.gstatic.com/s/pacifico/v12/FwZY7-Qmy14u9lezJ-6H6MmBp0u-.woff2) format('woff2');
+    font-display: swap;
+  }
+
+
 *{
     margin: 0;
     padding: 0;
@@ -7,11 +16,30 @@
 
 body, html{
     font-family: 'Oxygen';
-}
-
-.snap{
     scroll-behavior: smooth;
 }
+
+/* div{
+    width: 100%;
+} */
+
+/* .snap{
+    scroll-behavior: smooth;
+} */
+
+a{
+    text-decoration: none;
+}
+
+.navActive{
+    border-bottom: #463f3aff 2px solid;
+}
+
+/* .navActive::after{
+    content: '';
+    te
+    background-color: #463f3aff;
+} */
 
 section{
     width: 100%;
@@ -32,16 +60,39 @@ section{
     justify-items: center;
 }
 
-.grid-12{
+#hero .grid-12{
     display: grid;
     grid-template-rows: auto;
     grid-template-columns: 20% 80%;
 }
 
+.landing-icon{
+    color: #463f3aff;
+    font-size: 20rem;
+}
+
+.landing-info{
+    padding: 50px 0;
+}
+
+.grid-12{
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 60px;
+    row-gap: 25px;
+    align-items: start;
+    justify-items: center;
+}
+
 .grid-13{
     display: grid;
     grid-template-rows: auto;
-    grid-template-columns: repeat(auto, 3);
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 60px;
+    row-gap: 25px;
+    align-items: start;
+    justify-items: center;
 }
 
 .grid-15{
@@ -67,7 +118,7 @@ section{
     grid-template-rows: auto auto;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 60px;
-    row-gap: 25px;
+    row-gap: 60px;
 }
 
 .row-1{
@@ -91,6 +142,31 @@ section{
 #hero{
     height: 100vh;
     padding: 0 0;
+    background: url('./static/hero/vipash-tech-hero-\ background\ -image.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 0 0;
+    overflow: hidden;
+}
+
+#hero-websiteDev{
+    background: url('./static/hero/websiteDev-desktop.jpg');
+    height: 100vh;
+    padding: 0 0;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 0 0;
+    overflow: hidden;
+}
+
+#hero-eCommerce{
+    background: url('./static/hero/eCommerce-desktop.jpg');
+    height: 100vh;
+    padding: 0 0;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 0 0;
+    overflow: hidden;
 }
 
 .hero-text{
@@ -98,85 +174,175 @@ section{
     top: 50%;
     transform: translateY(-50%);
     font-size: 3rem;
-    width: calc(100% - 10% - 100px);
+    width: calc(100% - 35% - 100px);
 }
 
 .hero-image{
-    background-image: url('./static/hero-image-flipped.png');
+    /* background-image: url('./static/hero-image-flipped.png'); */
     background-size: cover;
     background-repeat: no-repeat;
 }
 
 
 #header{
-    background-color: #697199;
+    background-color: #463f3aff;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='100%25' height='100%25'%3E%3Cdefs%3E%3Cpattern id='p' width='100' height='100' patternUnits='userSpaceOnUse' patternTransform='scale(0.53)'%3E%3Ccircle id='a' data-color='outline' fill='none' stroke='%23FFFFFF' stroke-width='3.8' r='.5'%3E%3C/circle%3E%3Cuse xlink:href='%23a' y='100'%3E%3C/use%3E%3Cuse xlink:href='%23a' x='100'%3E%3C/use%3E%3Cuse xlink:href='%23a' x='100' y='100'%3E%3C/use%3E%3Cuse xlink:href='%23a' x='50' y='50'%3E%3C/use%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23p)' width='100%25' height='100%25'%3E%3C/rect%3E%3C/svg%3E");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
+
+#header > .container{
+    height: 100%;
+}
+
+#header  h2{
+    padding: 10vh 0 !important;
+    font-size: 4rem;
+}
+
 .hero-action{
     text-decoration: none;
     border: none;
-    background: #8B95C9;
-    color: #FFFCF9;
+    background: #463f3aff;
+    color: #ffffff;
     padding: 15px;
     font-size: 18px;
-    border-radius: 10px;
+    border-radius: 5px;
     margin-top: 45px;
     transition: 0.2s ease-out;
-    border: 0.5px solid #FFFCF9;
+    border: 0.5px solid #ffffff;
 }
 
 .hero-action:hover{
-    background-color: #FFFCF9;
-    color: #8B95C9;
-    border: 0.5px solid #252B31;
+    background-color: #ffffff;
+    color: #463f3aff;
+    border: 0.5px solid #463f3aff;
     cursor: pointer;
     filter: opacity(80%);
 }
 
 #expertiese{
-    background: #06D6A0;
+    background: #ffffff;
 }
 
 #expertiese > .heading{
     text-align: center;
     font-size: 45px;
-    padding-top: 15px;
-    color: #FFFCF9;
+    padding: 25px 0;
+    /* color: #FFFCF9; */
+}
+
+.heading{
+    text-align: center;
+    font-size: 45px;
+    padding: 25px 0;
+    line-height: 3rem;
+    /* color: #FFFCF9; */
 }
 
 #expertiese > .sub-heading{
-    padding: 15px;
+    padding: 25px 0;
     text-align: center;
-    color: #FFFCF9;
+    /* color: #FFFCF9; */
     font-size: 25px;
 }
 
+.sub-heading{
+    padding: 25px 0;
+    text-align: center;
+    /* color: #FFFCF9; */
+    font-size: 25px;
+}
+
+.ecom-content h2{
+    text-align: center;
+    padding: 45px 0;
+}
+
+.ecom-content .grid-12 > .grid-12{
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 10% 90%;
+    white-space: break-spaces;
+}
+
+/* .ecom-content p{
+    font-size: 16px;
+} */
+
+.ecom-content svg{
+    font-size: 70px;
+}
+
+
+
 #intro{
-    background: #8B95C9
+    background: #ffffff
 }
 
 #intro > .heading{
     text-align: center;
     font-size: 45px;
-    padding: 15px;
-    color: #FFFCF9;
+    padding: 25px 0;
+    /* color: #FFFCF9; */
 }
 
 #reviews-and-customers{
-    background: #06D6A0
+    background: #ffffff
 }
 
 #reviews-and-customers > .heading{
     text-align: center;
     font-size: 45px;
-    padding: 15px;
-    color: #FFFCF9;
+    padding: 25px 0;
+    /* color: #; */
 }
 
-.toTop{
+.reviewCard{
+    width: auto !important;
+}
+
+.serviceCard .heading{
+    /* font-size: 30px !important; */
+    padding: 20px 0;
+    min-width: 250px;
+}
+
+.serviceCard svg{
+    font-size: 120px;
+}
+
+
+.card-grid{
+    column-gap: 60px;
+    row-gap: 60px;
+}
+
+.grid-14{
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: repeat(4, 1fr);
+    align-items: center;
+    justify-items: center;
+    column-gap: 60px;
+    /* height: auto !important; */
+}
+
+.about-info h2.heading{
+    padding-top: 60px;
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+.address{
+    font-size: 16px;
+    line-height: 3rem;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+}
+
+/* .toTop{
     position: fixed;
     bottom: 15px;
     right: 15px;
@@ -190,7 +356,7 @@ section{
     text-align: center;
     transition: 0.2s ease-out;
     display: none;
-}
+} */
 
 .toTop a{
     text-decoration: none;
@@ -199,13 +365,13 @@ section{
 }
 
 .toTop a:hover{
-    color: #06D6A0;
+    color: #463f3a;
 }
 
-#footer{
-    background: #252B31;
+#footer, .footer{
+    background: #463f3aff;
     color: #FFFCF9;
-    padding-bottom: 0;
+    padding-bottom: 50px;
 }
 
 #footer .heading{
@@ -243,11 +409,11 @@ address > svg{
 }
 
 
-#footer .quick-links{
+#footer .quick-links, .footer .quick-links{
     list-style-type: none;
 }
 
-#footer a:hover{
+#footer a:hover, .footer a:hover{
     color: #807e7e;
 }
 
@@ -271,29 +437,35 @@ address > svg{
 
 .footer-logo{
     height: 150px;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 /* ELEMENTS */
 
 nav{
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: auto;
     max-height: 90px;
-    background: #FFFCF9;
+    background: #ffffff;
     z-index: 100;
 }
 
 .navbar{
     position: initial;
     display: block;
-    background: #FFFCF9;
+    background: #ffffff;
+}
 
+.client-logo{
+    width: 80px;
+    height: 80px;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
 }
 
 .navbar li a{
-    color: #252B31;
+    color: #463f3aff;
 }
 
 nav ul{
@@ -308,25 +480,31 @@ nav ul{
 nav ul li a{
     margin: auto;
     display: block;
-    color: #252B31;
+    color: #463f3aff;
     text-align: center;
     padding: 20px 0px 0px 0px;
     text-decoration: none;
     width: auto;
-    height: 60px;
+    /* height: 60px; */
     transition: 0.2s ease-out;
     font-size: 18px;
-    text-transform: uppercase;
+    letter-spacing: 2px;
+    /* text-transform: uppercase; */
 }
 
 nav ul li a:hover{
-    color: #697199;
+    color: #cec8bf;
 }
 
 .logo{
-    width: 60px;
-    height: 60px;
-} 
+    width: 70px;
+    height: 70px;
+}
+
+.company-logo > img{
+    width: 100%;
+    height: 100%;
+}
 
 .nav-links{
     width: calc(100% - 50% - 100px);
@@ -343,36 +521,66 @@ nav ul li a:hover{
 }
 
 .card{
-    width: 100%;
+    max-width: 100%;
     min-height: 200px;
-    background: #FFFCF9;
-    color: #252B31;
+    height: 100%;
+    background: #ffffff;
+    color: #463f3aff;
     padding: 15px;
     justify-self: center;
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: 0px 0px 30px 10px rgba(0,0,0,0.2);
+    transition: 0.2s ease-out;
+}
+
+.card a{
+    color: #252B31;
+    transition:  0.2s ease-out;
+}
+
+.card a:hover{
+    color: #cec8bf
 }
 
 .card > .icon{
     text-align: center;
     font-size: 65px;
-    color: #697199;
+    color: #463f3a;
 }
 
 .card > .heading{
     text-align: center;
     font-size: 18px;
     padding-bottom: 10px;
+    font-weight: bolder;
 }
 
 .card > .text{
-    font-size: 16px;
+    font-size: 14px;
     text-align: center;
+    line-height: 1.5rem;
+}
+
+.card > .img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
 }
 
 .card:hover{
     cursor: pointer;
+    background-color: #463f3aff;
+    color: #fff;
 }
+
+.card:hover .icon{
+    color: #fff;
+}
+
+.card:hover .slick-dots li button::before{
+    color: #fff;
+}
+
 
 .grid-1 > .card{
     width: 100% !important;
@@ -387,20 +595,20 @@ nav ul li a:hover{
 button{
     text-decoration: none;
     border: none;
-    background: #8B95C9;
-    color: #FFFCF9;
+    background: #463f3aff;
+    color: #ffffff;
     padding: 15px;
     font-size: 18px;
-    border-radius: 10px;
+    border-radius: 5px;
     margin-top: 45px;
     transition: 0.2s ease-out;
-    border: 0.5px solid #FFFCF9;
+    border: 0.5px solid #ffffff;
 }
 
 button:hover{
-    background-color: #FFFCF9;
-    color: #8B95C9;
-    border: 0.5px solid #252B31;
+    background-color: #ffffff;
+    color: #463f3aff;
+    border: 0.5px solid #463f3aff;
     cursor: pointer;
 }
 
@@ -418,7 +626,7 @@ button:hover{
 
 .form #submit{
     border: #252B31 1px solid;
-    background: #FFFCF9;
+    background: #ffffff;
     color: #252B31;
     margin-top: 17px;
     transition: 0.2s ease-out;
@@ -426,19 +634,44 @@ button:hover{
 
 .form #submit:hover{
     border: #FFFCF9 1px solid;
-    background: #252B31;
-    color: #FFFCF9;
+    background: #463f3aff;
+    color: #ffffff;
 }
 
 input, textarea{
-    border: none;
-    border-radius: 10px;
+    border: #252B31 solid 1px;
+    border-radius: 5px;
     padding: 15px;
     margin: 6px 0;
     font-size: 18px;
     width: 100%;
-    background: #FFFCF9;
+    background: #ffffff;
     font-family: 'Oxygen';
+}
+
+#complaint-proof{
+    padding: 0 30px 0px 0px;
+}
+
+#complaint-proof::file-selector-button{
+    text-decoration: none;
+    border: none;
+    background: #463f3aff;
+    color: #ffffff;
+    padding: 15px;
+    font-size: 18px;
+    border-radius: 5px;
+    /* margin-top: 45px; */
+    transition: 0.2s ease-out;
+    /* border: 0.5px solid #ffffff; */
+    /* height: 100%; */
+}
+
+#complaint-proof::file-selector-button:hover{
+    background-color: #ffffff;
+    color: #463f3aff;
+    border-right: 0.5px solid #463f3aff;
+    cursor: pointer;
 }
 
 .watermark{
@@ -480,7 +713,7 @@ input, textarea{
     font-weight: bold;
     font-size: 26px;
     transition: 0.2s ease-out;
-    border-radius: 10px;
+    border-radius: 5px;
     user-select: none;
 }
 
@@ -492,7 +725,7 @@ input, textarea{
 .prev:hover{
     color: #8B95C9;
     transform: translateX(-7px);
-} 
+}
 
 .next:hover{
     color: #8B95C9;
@@ -552,19 +785,37 @@ input, textarea{
     font-size: 16px;
     line-height: 2rem;
     padding: 45px 0;
-    background: #FFFCF9;
+    background: #ffffff;
 }
-
+/*
 #header  h1{
     padding-top: 45px;
-}
-
-/* .footer{
-
 } */
+
+.footer{
+    /* background: #252B31;
+    color: #FFFCF9; */
+    padding: 50px 0 !important;
+}
 
 .visibleForMobile{
     display: none;
+}
+
+.w-90{
+    width: 90% !important;
+}
+
+.p-tb-30{
+    padding: 30px 0;
+}
+
+.p-tb-50{
+    padding: 50px 0;
+}
+
+.w-center{
+    width: 40% !important;
 }
 
 .fade {
@@ -573,12 +824,12 @@ input, textarea{
     animation-name: fade;
     animation-duration: 1.5s;
 }
-  
+
 @-webkit-keyframes fade {
     from {opacity: .02}
     to {opacity: 1}
 }
-  
+
 @keyframes fade {
     from {opacity: .02}
     to {opacity: 1}
@@ -594,6 +845,10 @@ input, textarea{
         scroll-snap-type:none;
     }
 
+    .w-center{
+        width: 84% !important;
+    }
+
     section{
         width: 100%;
         height: 100%;
@@ -606,41 +861,61 @@ input, textarea{
         overscroll-behavior: contain;
     }
 
-    .visibleForMobile{
+    .ecom-content .grid-12 > .grid-12{
+        text-align: center;
+    }
+
+
+
+    .visibleForMobile ,.visibleForMobile.ham{
         display: block;
+        line-height: 7rem;
+        width: auto;
+    }
+
+    nav{
+        min-height: 120px;
     }
 
     .hamburger{
-        position: absolute;
-        width: 85%;
+        position: sticky;
+        width: 100%;
         height: 100vh;
         top: 0;
         bottom: 0;
-        left:100vw;
+        /* left:100vw; */
         transition: 0.2s ease-out;
-        background: #252B31;
-        z-index: 100;
-        overscroll-behavior: contain;
-        display: none;
+        background: #463f3aff;
+        z-index: 110;
+        /* overscroll-behavior: contain; */
+        /* overflow: hidden; */
+        /* display: none; */
     }
 
     .hamVisible{
         display: block;
-        left: calc(100vw - 85%);
+        /* left: calc(100vw - 85%); */
         transition: 0.2s ease-out;
     }
 
     .hamburger ul{
         display: block;
+        height: 100vh;
+        /* padding-top: 25px; */
     }
 
     .hamburger ul li{
         text-decoration: none;
     }
 
-    .logo{
+    hamburger ul li a.logo{
         margin: -20px 0;
-        border-radius: 10px;
+        border-radius: 5px;
+    }
+
+    .logo > img{
+        width: 100%;
+        border-radius: 5px;
     }
 
     .hamburger ul li a#hamClose{
@@ -653,7 +928,7 @@ input, textarea{
         color: #FFFCF9;
     }
 
-    .hamburger ul li a i{
+    .hamburger ul li a svg{
         font-size: 26px;
     }
 
@@ -674,7 +949,23 @@ input, textarea{
     }
 
     #hero{
-        background: url("./static/hero-background-mobile.png");
+        background: url("./static/vipash-tech-mobile-hero-image.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        padding: 0 0;
+        height: 100vh;
+    }
+
+    #hero-websiteDev{
+        background: url('./static/hero/websiteDev-mobile.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        padding: 0 0;
+        height: 100vh;
+    }
+    
+    #hero-eCommerce{
+        background: url('./static/hero/eCommerce-mobile.jpg');
         background-size: cover;
         background-repeat: no-repeat;
         padding: 0 0;
@@ -687,12 +978,14 @@ input, textarea{
 
     .hero-text{
         width: auto;
+        font-size: 2rem;
     }
 
     .mgrid{
         display: grid;
         grid-template-columns: auto !important;
     }
+
 
     .col-3{
         grid-row-start: auto;
@@ -703,5 +996,9 @@ input, textarea{
 
     input, textarea{
         width: calc(100vw - 31%);
+    }
+
+    #header  h2{
+        padding: 6vh 0;
     }
 }
