--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,15 @@ a{
     text-decoration: none;
 }
 
+.loader{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #463f3aff;
+    font-size: 35px;
+}
+
 .navActive{
     border-bottom: #463f3aff 2px solid;
 }
@@ -436,7 +445,8 @@ address > svg{
 }
 
 .footer-logo{
-    height: 150px;
+    height: 100px;
+    width: 100px;
     border-radius: 5px;
 }
 
